--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
             <p class="price">R$ 25,00</p>
           </div>
           <div class="product">
-            <img src="images/product-1.png" alt="">
-            <p class="title">Macarrão Maroto</p>
-            <p class="price">R$ 15,00</p>
+            <img src="images/product-3.png" alt="">
+            <p class="title">Feijuca da Hora</p>
+            <p class="price">R$ 20,00</p>
           </div>
           <div class="product">
             <img src="images/product-2.png" alt="">
